work in progress

--- a/march-update/sales/index.html
+++ b/march-update/sales/index.html
@@ -35,78 +35,125 @@
                 <h1>Squarespace in a Box</h1>
                 <p>Content plan + website for freelancers</p>
             </header>
-                <section class="pain-points">
+            <section class="pain-points">
+                <div class="pain-points-copy">
+                    <h3>Are you feeling like this?</h3>
 
-                </section>
-                <section class="sales-solutions">
+                </div>
+            </section>
+            <section class="sales-solutions">
+                <div class="sales-solutions-copy">
+                    <h3>Want to know how to fix this?</h3>
+                    <p>Build your damn website.</p>
+                    <p>The right damn way. The first time.</p>
 
-                </section>
-                <section class="sales-included">
+                </div>
+            </section>
+            <section class="sales-included">
+                <div class="sales-included-copy">
+                    <h3>What makes this different from the other products out there?</h3>
 
-                </section>
-                <section class="sales-payment">
+                </div>
+            </section>
+            <section class="sales-payment">
+                <div class="sales-payment-copy">
+                    <h3>Are you ready to prove to your nosey friends and family that you have a real business?</h3>
 
-                </section>
-                <section class="sales-testimonials">
+                </div>
+            </section>
+            <section class="sales-testimonials">
+                <div class="sales-testimonials-copy">
+                    <h3>Testimonials</h3>
 
-                </section>
-                <section class="sales-bio">
+                </div>
+            </section>
+            <section class="sales-bio">
+                <div class="sales-bio-copy">
+                    <h3>About Aleia Walker</h3>
 
-                </section>
-                <section class="sales-clients">
+                </div>
+            </section>
+            <section class="sales-clients">
+                <div class="sales-clients-copy">
+                    <h3>Who is this for?</h3>
 
-                </section>
-                <section class="sales-faqs">
+                </div>
+            </section>
+            <section class="sales-faqs">
+                <h3>FAQs</h3>
+                <div class="sales-faqs-copy">
+                    <h4>I've heard of designers charging much less than $497, is this too good to be true?</h4>
+                        <p>
+                            Great question! So right now this project is in beta mode so I’m offering introductory prices! We talked about a few things so I’ll make a tailored proposal and sent it over to you by end of day.
+                        </p>
+                    <h4>Why Squarespace?</h4>
+                        <p>
+                            I like Squarespace because there’s a very low barrier to entry it’s easy to use. Once everything is created on my end, you won’t need to know how to code. And it’s a little more straightforward than other Content Management Systems like WordPress and Drupal that need manuals to operate. Part of the package includes a walk through of how to use your site when it’s handed back to you but you’ll find it’s a pretty user friendly platform.
+                        </p>
+                        <p>
+                            If you will be blogging, uploading portfolio pieces,or updating the copy on your page, you will be able to do so in a series of clicks. I want to make the barrier to entry realllly low. We can do more fancy things later.
+                        </p>
 
-                </section>
-                <footer>
-                    <section class="footer-copy">
-                        <div class="sales-title">
-                            <h2>Squarespace in a Box</h2>
+                    <h4>If you’re using Squarespace, why can’t I do it myself?</h4>
+                        <p>
+                            The short answer is that you can 100% put a site on the web using Squarespace or WordPress or Wix or Weebly but it may not have all the functionality that you need. You might not be able to create a blog or influence your SEO (which gets more people to your site). Or easily update your site or have the kind of copy that turns prospective customers into customers. Or you realize that design and development will be better off in the hands of the people who do this everyday. Or maybe you just don’t have the time.
+                        </p>
+
+                        <p>
+                            Of course. But will it have all the things you need and that prospective clients want? Maybe not. And if you could have done it yourself, don’t you think you already would have?
+                        </p>
+                </div>
+            </section>
+            <footer>
+                <section class="footer-copy">
+                    <div class="sales-title">
+                        <h2>Squarespace in a Box</h2>
+                    </div>
+                    <div class="footer-bio">
+                        <div>
+                            <p>Brought to you by</p>
                         </div>
-                        <div class="footer-bio">
-                            <div class="footer-author">
-                                <p>Brought to you by</p>
-                                <figure class="logo">
-                                    <img src="http://www.aleiawalker.com/img/logo.svg" alt="aleia walker logo">
-                                </figure>
-                                <h2>Aleia Walker</h2>
-                            </div>
-                            <ul class="social">
-                                <li>
-                                    <a href="https://twitter.com/msaleia" target="_blank">
-                                        <i class="fa fa-twitter fa-lg"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://github.com/msaleia" target="_blank">
-                                        <i class="fa fa-github-alt fa-lg"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://linkedin.com/in/aleiawalker" target="_blank">
-                                        <i class="fa fa-linkedin fa-lg"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://behance.net/aleiawalker" target="_blank">
-                                        <i class="fa fa-behance fa-lg"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="mailto:aleia@aleiawalker.com">
-                                        <i class="fa fa-envelope fa-lg"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="http://eepurl.com/ci_tVf">
-                                        <i class="fa fa-rss fa-lg"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div> <!-- footer bio -->
-                    </section> <!-- footer copy -->
-                </footer>
+                        <div class="footer-author">
+                            <figure class="logo">
+                                <img src="http://www.aleiawalker.com/img/logo.svg" alt="aleia walker logo">
+                            </figure>
+                            <h2>Aleia Walker</h2>
+                        </div>
+                    </div>
+                    <ul class="social">
+                        <li>
+                            <a href="https://twitter.com/msaleia" target="_blank">
+                                <i class="fa fa-twitter fa-lg"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/msaleia" target="_blank">
+                                <i class="fa fa-github-alt fa-lg"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://linkedin.com/in/aleiawalker" target="_blank">
+                                <i class="fa fa-linkedin fa-lg"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://behance.net/aleiawalker" target="_blank">
+                                <i class="fa fa-behance fa-lg"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="mailto:aleia@aleiawalker.com">
+                                <i class="fa fa-envelope fa-lg"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://eepurl.com/ci_tVf">
+                                <i class="fa fa-rss fa-lg"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </section> <!-- footer copy -->
+            </footer>
         </main> <!-- wrapper main ended -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
