Added offering block + three folders

--- a/march-update/index.html
+++ b/march-update/index.html
@@ -107,7 +107,7 @@
                             </p>
                             <h1 class="uppercase">Aleia Walker</h1>
                             <p class="welcome-tagline">
-                                <span class="welcome-span">I am a web developer + instructor at Skillcrush +</span> <a href="https://www.bit.ly/side-hustle-starter">full-time side hustler</a>.
+                                <span class="welcome-span">I am a web designer/developer + <a href="https://www.bit.ly/side-hustle-starter">holder of all the freelance resources</a> + instructor at Skillcrush</span>.
                             </p>
                         </div> <!-- welcome info wrapper -->
 
@@ -174,10 +174,56 @@
                         </div>
                     </aside> <!-- welcome right end -->
                 </section>
+                <section class="offerings">
+                    <div class="offerings-container">
+                        <h2>Let's talk...</h2>
+                        <div class="offerings-container-wrapper">
+                            <article class="offerings-item" id="resources">
+                                <div class="offerings-items-container">
+                                    <h3>freelance resources.</h3>
+                                    <div class="offerings-item-wrapper">
+                                        <p>
+                                            You're working on figuring out what you want your side hustle to be or trying to learn skills to be better at your craft.    
+                                        </p>
+                                        <button>
+                                            <a href="resources/">Want to hear more?</a>
+                                        </button>
+                                    </div>
+                                </div>
+                            </article>
+                            <article class="offerings-item" id="hack-your-hustle">
+                                <div class="offerings-items-container">
+                                    <h3>making your plan to take your side hustle to full-time plan.</h3>
+                                    <div class="offerings-item-wrapper">
+                                        <p>
+                                            You're pretty sure that you know what you want your side hustle to be but you need help making a plan to quit your 9 to 5 job? You want to work together someone who took their side hustle full-time to build your side hustle education, implementation, and marketing plan.  
+                                        </p>
+                                        <button>
+                                            <a href="hack-your-hustle/">Want to hear more?</a>
+                                        </button>
+                                    </div>
+                                </div>
+                            </article> 
+                            <article class="offerings-item" id="squarespace-in-a-box">
+                                <div class="offerings-items-container">
+                                    <h3>what to put on your website.</h3>
+                                    <div class="offerings-item-wrapper">
+                                        <p>
+                                            You're a freelancer now! You're building a client base and now you're ready to turn strangers into clients with your website. You want to work with someone to figure what to put on your website, get it up and running in 30 days, and be able to manage it on your own.
+                                        </p>
+                                        <button>
+                                            <a href="squarespace-in-a-box/">Want to hear more?</a>
+                                        </button>
+                                    </div>
+                                </div>
+                            </article> 
+                        </div> <!-- offerings container wrapper -->
+                    </div>
+                </section>
             </div>  <!-- menu hide -->
                 <footer>
                     <div class="footer-copy">
-                        <p class="footer-tag">Aleia elsewhere on the web</p>
+                        <p class="footer-tag">Find Aleia on the web</p>
                         <ul class="social">
                             <li>
                                 <a href="https://twitter.com/msaleia" target="_blank">
@@ -240,7 +286,7 @@
         });                
         </script>
         <!-- Start of LiveChat (www.livechatinc.com) code -->
-        <script type="text/javascript">
+        <!-- <script type="text/javascript">
         window.__lc = window.__lc || {};
         window.__lc.license = 8629559;
         (function() {
@@ -248,7 +294,7 @@
           lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js';
           var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
         })();
-        </script>
+        </script> -->
         <!-- End of LiveChat code -->
     </body>
 </html>
