continuing to update content block & removing RSS feed link from footer

--- a/march-update/index.html
+++ b/march-update/index.html
@@ -180,33 +180,33 @@
                         <div class="offerings-container-wrapper">
                             <article class="offerings-item" id="resources">
                                 <div class="offerings-items-container">
-                                    <h3>freelance resources.</h3>
+                                    <h3>...freelance resources.</h3>
                                     <div class="offerings-item-wrapper">
                                         <p>
                                             You're working on figuring out what you want your side hustle to be or trying to learn skills to be better at your craft.    
                                         </p>
                                         <button>
-                                            <a href="resources/">Want to hear more?</a>
+                                            <a href="resources/">Want more resources?</a>
                                         </button>
                                     </div>
                                 </div>
                             </article>
                             <article class="offerings-item" id="hack-your-hustle">
                                 <div class="offerings-items-container">
-                                    <h3>making your plan to take your side hustle to full-time plan.</h3>
+                                    <h3>...making your plan to take your side hustle to full-time plan.</h3>
                                     <div class="offerings-item-wrapper">
                                         <p>
                                             You're pretty sure that you know what you want your side hustle to be but you need help making a plan to quit your 9 to 5 job? You want to work together someone who took their side hustle full-time to build your side hustle education, implementation, and marketing plan.  
                                         </p>
                                         <button>
-                                            <a href="hack-your-hustle/">Want to hear more?</a>
+                                            <a href="hack-your-hustle/">Ready to make your plan?</a>
                                         </button>
                                     </div>
                                 </div>
                             </article> 
                             <article class="offerings-item" id="squarespace-in-a-box">
                                 <div class="offerings-items-container">
-                                    <h3>what to put on your website.</h3>
+                                    <h3>...what to put on your website.</h3>
                                     <div class="offerings-item-wrapper">
                                         <p>
                                             You're a freelancer now! You're building a client base and now you're ready to turn strangers into clients with your website. You want to work with someone to figure what to put on your website, get it up and running in 30 days, and be able to manage it on your own.
@@ -249,12 +249,7 @@
                                 <a href="mailto:aleia@aleiawalker.com">
                                     <i class="fa fa-envelope fa-lg"></i>
                                 </a>
-                            </li>
-                            <li>
-                                <a href="http://eepurl.com/ci_tVf">
-                                    <i class="fa fa-rss fa-lg"></i>
-                                </a>
-                            </li>
+                            </li> 
                         </ul>
                     </div>
                 </footer>
