completed design of three resource sections + updated footer to be more visually appealing & include pertinent social media links

--- a/march-update/contact/index.html
+++ b/march-update/contact/index.html
@@ -183,36 +183,42 @@
                 </main>
 
                 <footer>
-            <div class="footer-copy">
-                <p class="hairline footer-tag">Aleia elsewhere on the web</p>
-                <ul class="social">
-                    <li>
-                        <a href="https://twitter.com/msaleia" target="_blank">
-                            <i class="fa fa-twitter fa-lg" alt="twitter icon"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/msaleia" target="_blank">
-                            <i class="fa fa-github-alt fa-lg" alt="GitHub icon"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://linkedin.com/in/aleiawalker" target="_blank">
-                            <i class="fa fa-linkedin fa-lg" alt="linkedin icon"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://behance.net/aleiawalker" target="_blank">
-                            <i class="fa fa-behance fa-lg" alt="Behance icon"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="mailto:aleia@aleiawalker.com">
-                            <i class="fa fa-envelope fa-lg" alt="email icon"></i>
-                        </a>
-                    </li>
-                </ul>
-            </footer>
+                    <div class="footer-copy">
+                        <ul class="social">
+                            <li>
+                                <a href="http://bit.ly/twitter-aleia" target="_blank">
+                                    <i class="fa fa-twitter fa-lg" alt="twitter icon"></i>
+                                </a>
+                            </li>
+                            <!-- <li>
+                                <a href="https://github.com/msaleia" target="_blank">
+                                    <i class="fa fa-github-alt fa-lg" alt="GitHub icon"></i>
+                                </a>
+                            </li> -->
+                            <li>
+                                <a href="https://linkedin.com/in/aleiawalker" target="_blank">
+                                    <i class="fa fa-linkedin fa-lg" alt="linkedin icon"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://bit.ly/pinterest-aleia" target="_blank">
+                                    <i class="fa fa-pinterest-p fa-lg" alt="pinterest icon"></i>
+                                </a>
+                            </li>
+                            <!-- <li>
+                                <a href="https://behance.net/aleiawalker" target="_blank">
+                                    <i class="fa fa-behance fa-lg" alt="Behance icon"></i>
+                                </a>
+                            </li> -->
+                            <li>
+                                <a href="mailto:aleia@aleiawalker.com">
+                                    <i class="fa fa-envelope fa-lg" alt="email icon"></i>
+                                </a>
+                            </li>
+                        </ul>
+                        <p class="footer-tag">Copyright &copy; 2017, Aleia Walker. All rights reserved.</p>
+                    </div>
+                </footer>
             </div> <!-- menu hide -->
         </div> <!-- wrapper -->
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
