--- a/march-update/index.html
+++ b/march-update/index.html
@@ -223,34 +223,39 @@
             </div>  <!-- menu hide -->
                 <footer>
                     <div class="footer-copy">
-                        <p class="footer-tag">Find Aleia on the web</p>
                         <ul class="social">
                             <li>
-                                <a href="https://twitter.com/msaleia" target="_blank">
-                                    <i class="fa fa-twitter fa-lg"></i>
+                                <a href="http://bit.ly/twitter-aleia" target="_blank">
+                                    <i class="fa fa-twitter fa-lg" alt="twitter icon"></i>
                                 </a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="https://github.com/msaleia" target="_blank">
-                                    <i class="fa fa-github-alt fa-lg"></i>
+                                    <i class="fa fa-github-alt fa-lg" alt="GitHub icon"></i>
                                 </a>
-                            </li>
+                            </li> -->
                             <li>
                                 <a href="https://linkedin.com/in/aleiawalker" target="_blank">
-                                    <i class="fa fa-linkedin fa-lg"></i>
+                                    <i class="fa fa-linkedin fa-lg" alt="linkedin icon"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://behance.net/aleiawalker" target="_blank">
-                                    <i class="fa fa-behance fa-lg"></i>
+                                <a href="http://bit.ly/pinterest-aleia" target="_blank">
+                                    <i class="fa fa-pinterest-p fa-lg" alt="pinterest icon"></i>
                                 </a>
                             </li>
+                            <!-- <li>
+                                <a href="https://behance.net/aleiawalker" target="_blank">
+                                    <i class="fa fa-behance fa-lg" alt="Behance icon"></i>
+                                </a>
+                            </li> -->
                             <li>
                                 <a href="mailto:aleia@aleiawalker.com">
-                                    <i class="fa fa-envelope fa-lg"></i>
+                                    <i class="fa fa-envelope fa-lg" alt="email icon"></i>
                                 </a>
-                            </li> 
+                            </li>
                         </ul>
+                        <p class="footer-tag">Copyright &copy; 2017, Aleia Walker. All rights reserved.</p>
                     </div>
                 </footer>
         </div> <!-- wrapper div ended -->
