added instagram icon to social media

--- a/march-update/about/index.html
+++ b/march-update/about/index.html
@@ -281,6 +281,11 @@
                                 </a>
                             </li> -->
                         <li>
+                            <a href="http://bit.ly/instagram-aleia">
+                                <i class="fa fa-instagram fa-lg" alt="instagram icon"></i>
+                            </a>
+                        </li>
+                        <li>
                             <a href="mailto:aleia@aleiawalker.com">
                                 <i class="fa fa-envelope fa-lg" alt="email icon"></i>
                             </a>
