--- a/march-update/portfolio/index.html
+++ b/march-update/portfolio/index.html
@@ -396,6 +396,11 @@
                                 </a>
                             </li> -->
                             <li>
+                                <a href="http://bit.ly/instagram-aleia">
+                                    <i class="fa fa-instagram fa-lg" alt="email icon"></i>
+                                </a>
+                            </li>
+                            <li>
                                 <a href="mailto:aleia@aleiawalker.com">
                                     <i class="fa fa-envelope fa-lg" alt="email icon"></i>
                                 </a>
