updating about page

--- a/march-update/index.html
+++ b/march-update/index.html
@@ -114,7 +114,7 @@
                         <div class="opt-in-divider"></div>
                     
                         <div class="opt-in-tagline">
-                            <p>... and I help side hustlers go from freelance to full time.</p>
+                            <p>... and I help freelancers take their hustles full time.</p>
                             <p>Join me in fighting your fears and learn how escape your 9 to 5 by building your side hustle.</p>
                         </div>
                     </aside>
