--- a/march-update/about/index.html
+++ b/march-update/about/index.html
@@ -41,119 +41,121 @@
             </figure>
         </header>
         <section id="menu-main" class="uppercase">
-                <div class="menu-wrapper">
-                    <ul class="menu-active">
-                        <li>
-                            <a href="../">
-                                Home                                
-                            </a>
-                        </li>
-                        <li class ="spacer"></li>
-                        <li>
-                            <a href="#">
-                                About Me
-                            </a>
-                        </li>
-                        <li class ="spacer"></li>
-                        <li>
-                            <a href="../work-with-me/">
-                                Work with Me
-                            </a>
-                        </li>
-                        <li class ="spacer"></li>
-                        <li>
-                            <a href="../portfolio/">
-                                Portfolio
-                            </a>
-                        </li>
-                        <li class ="spacer"></li>
-                        <li>
-                            <a href="../contact/">
-                                Contact
-                            </a>
-                        </li>
+            <div class="menu-wrapper">
+                <ul class="menu-active">
+                    <li>
+                        <a href="../">
+                            Home                                
+                        </a>
+                    </li>
+                    <li class ="spacer"></li>
+                    <li>
+                        <a href="#">
+                            About Me
+                        </a>
+                    </li>
+                    <li class ="spacer"></li>
+                    <li>
+                        <a href="../work-with-me/">
+                            Work with Me
+                        </a>
+                    </li>
+                    <li class ="spacer"></li>
+                    <li>
+                        <a href="../portfolio/">
+                            Portfolio
+                        </a>
+                    </li>
+                    <li class ="spacer"></li>
+                    <li>
+                        <a href="../contact/">
+                            Contact
+                        </a>
+                    </li>
                         <!-- <li class ="spacer"></li>
                         <li>
                             <a href="../blog">
                                 Archives
                             </a>
                         </li> -->
-                    </ul>
-                </div>
-            </section>
-            <div class="menu-hide">
-            
+                </ul>
+            </div>
+        </section>
+        <div class="menu-hide">
             <section class="welcome">
-                <aside class="welcome-photos">
-                    <div class="photo-row">
-                        <figure class="aleia-photo">
-                            <img src="../img/aleia-6.jpg" alt="photo of Aleia">
-                        </figure>
-                    </div>
-                </aside>
-                <aside class="welcome-info">
-                    <div class="welcome-info-wrapper">
-                        <p class="welcome-intro">
-                            <span class="intro-hi">Hello.</span> <span class="intro-name">My name is</span>
-                        </p>
-                        <h1 class="uppercase">Aleia Walker</h1>
-                        <p class="welcome-tagline">
-                            frontend developer + instructor at Skillcrush + <a href="https://www.bit.ly/side-hustle-starter">full-time side hustler</a>.
-                        </p>
-                        <p class="cta">... and I help other side hustlers make their mark on the web.</p>
-                        <p class="cta">Join me if you want to make a plan to change your career this year!</p>
-                    </div> <!-- welcome info wrapper -->
-                    <div class="email-signup">
-                            <!-- Begin ConvertKit Signup Form -->
-                            <script src="https://assets.convertkit.com/assets/CKJS4.js?v=21"></script>
-                            <div class="ck_form_container ck_inline" data-ck-version="6">
-                              <div class="ck_form ck_naked">
-                              <div class="ck_form_fields">
-                                <div id="ck_success_msg" style="display:none;">
-                                  <p>Success! Now check your email to confirm your subscription and download your guide.</p>
+                <div class="welcome-container">
+                    <aside class="welcome-photos">
+                        <div class="photo-row">
+                            <figure class="aleia-photo">
+                                <img src="../img/aleia-6.jpg" alt="photo of Aleia">
+                            </figure>
+                        </div>
+                    </aside>
+                    <aside class="welcome-info">
+                        <div class="welcome-info-wrapper">
+                            <p class="welcome-intro">
+                                <span class="intro-hi">Hello.</span> <span class="intro-name">My name is</span>
+                            </p>
+                            <h1 class="uppercase">Aleia Walker</h1>
+                            <p class="welcome-tagline">
+                                <span class="welcome-span">I am a web designer/developer + <a href="https://www.bit.ly/side-hustle-starter">holder of all the freelance resources</a> + instructor at Skillcrush</span>.
+                            </p>
+                            <div class="opt-in-tagline non-homepage">
+                                <p>... and I help freelancers take their hustles full time.<br>
+                                Join me in fighting your fears and learn how escape your 9 to 5 by building your side hustle.</p>
+                            </div>
+                        </div> <!-- welcome info wrapper -->
+                        <div class="email-signup">
+                                <!-- Begin ConvertKit Signup Form -->
+                                <script src="https://assets.convertkit.com/assets/CKJS4.js?v=21"></script>
+                                <div class="ck_form_container ck_inline" data-ck-version="6">
+                                  <div class="ck_form ck_naked">
+                                  <div class="ck_form_fields">
+                                    <div id="ck_success_msg" style="display:none;">
+                                      <p>Success! Now check your email to confirm your subscription and download your guide.</p>
+                                    </div>
+
+                                    <!--  Form starts here  -->
+                                    <form id="ck_subscribe_form" class="ck_subscribe_form" action="https://app.convertkit.com/landing_pages/159992/subscribe" data-remote="true">
+                                      <input type="hidden" value="{&quot;form_style&quot;:&quot;naked&quot;,&quot;embed_style&quot;:&quot;inline&quot;,&quot;embed_trigger&quot;:&quot;scroll_percentage&quot;,&quot;scroll_percentage&quot;:&quot;70&quot;,&quot;delay_seconds&quot;:&quot;10&quot;,&quot;display_position&quot;:&quot;br&quot;,&quot;display_devices&quot;:&quot;all&quot;,&quot;days_no_show&quot;:&quot;15&quot;,&quot;converted_behavior&quot;:&quot;show&quot;}" id="ck_form_options">
+                                      <input type="hidden" name="id" value="159992" id="landing_page_id">
+                                      <div class="ck_errorArea">
+                                        <div id="ck_error_msg" style="display:none">
+                                          <p>There was an error submitting your subscription. Please try again.</p>
+                                        </div>
+                                      </div>
+                                      <div class="ck_control_group ck_email_field_group">
+                                        <label class="ck_label" for="ck_emailField" style="display: none">Email Address</label>
+                                        <input type="text" name="first_name" class="ck_first_name" id="ck_firstNameField" placeholder="First Name">
+                                        <input type="email" name="email" class="ck_email_address" id="ck_emailField" placeholder="Email Address" required>
+                                      </div>
+                                      <div class="ck_control_group ck_captcha2_h_field_group ck-captcha2-h" style="position: absolute !important;left: -999em !important;">
+                                        <input type="text" name="captcha2_h" class="ck-captcha2-h" id="ck_captcha2_h" placeholder="We use this field to detect spam bots. If you fill this in, you will be marked as a spammer.">
+                                      </div>
+
+
+                                      <button class="subscribe_button ck_subscribe_button btn fields" id="ck_subscribe_button">
+                                        Get your resources
+                                      </button>
+                                    </form>
+                                  </div>
+
                                 </div>
 
-                                <!--  Form starts here  -->
-                                <form id="ck_subscribe_form" class="ck_subscribe_form" action="https://app.convertkit.com/landing_pages/159992/subscribe" data-remote="true">
-                                  <input type="hidden" value="{&quot;form_style&quot;:&quot;naked&quot;,&quot;embed_style&quot;:&quot;inline&quot;,&quot;embed_trigger&quot;:&quot;scroll_percentage&quot;,&quot;scroll_percentage&quot;:&quot;70&quot;,&quot;delay_seconds&quot;:&quot;10&quot;,&quot;display_position&quot;:&quot;br&quot;,&quot;display_devices&quot;:&quot;all&quot;,&quot;days_no_show&quot;:&quot;15&quot;,&quot;converted_behavior&quot;:&quot;show&quot;}" id="ck_form_options">
-                                  <input type="hidden" name="id" value="159992" id="landing_page_id">
-                                  <div class="ck_errorArea">
-                                    <div id="ck_error_msg" style="display:none">
-                                      <p>There was an error submitting your subscription. Please try again.</p>
-                                    </div>
-                                  </div>
-                                  <div class="ck_control_group ck_email_field_group">
-                                    <label class="ck_label" for="ck_emailField" style="display: none">Email Address</label>
-                                    <input type="text" name="first_name" class="ck_first_name" id="ck_firstNameField" placeholder="First Name">
-                                    <input type="email" name="email" class="ck_email_address" id="ck_emailField" placeholder="Email Address" required>
-                                  </div>
-                                  <div class="ck_control_group ck_captcha2_h_field_group ck-captcha2-h" style="position: absolute !important;left: -999em !important;">
-                                    <input type="text" name="captcha2_h" class="ck-captcha2-h" id="ck_captcha2_h" placeholder="We use this field to detect spam bots. If you fill this in, you will be marked as a spammer.">
-                                  </div>
-
-
-                                  <button class="subscribe_button ck_subscribe_button btn fields" id="ck_subscribe_button">
-                                    Join Me!
-                                  </button>
-                                </form>
-                              </div>
-
+                                </div>
                             </div>
-
+                            <!-- Begin MailChimp Signup Form -->
+                            <!-- <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+                            <div id="mc_embed_signup">
+                                <div id="mc_embed_signup_scroll">
+                                    <button>
+                                        <a href="http://eepurl.com/ci_tVf">Join Me!</a>
+                                    </button>
+                                </div>
                             </div>
-
-                        </div>
-                        <!-- Begin MailChimp Signup Form -->
-                        <!-- <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-                        <div id="mc_embed_signup">
-                            <div id="mc_embed_signup_scroll">
-                                <button>
-                                    <a href="http://eepurl.com/ci_tVf">Join Me!</a>
-                                </button>
-                            </div>
-                        </div>
-                    </div> --> <!-- opt-in end -->        
-                </aside>
+                        </div> --> <!-- opt-in end -->        
+                    </aside>
+                </div> <!-- welcome container end -->
             </section>
 
 
@@ -182,33 +184,34 @@
 
                     <figure class="about-aside-photo"></figure>
                 </aside>
+                <div class="about-after-aside-copy">
+                    <p>You read that right: I’m a full-time freelancer with the heart of a side hustler. I’ve never forgotten the kind of focus it takes to juggle two jobs and navigate yourself through a new career.</p>
 
-                <p>You read that right: I’m a full-time freelancer with the heart of a side hustler. I’ve never forgotten the kind of focus it takes to juggle two jobs and navigate yourself through a new career.</p>
+                    <p>Now my passion is building websites for multi-passionate, creative entrepreneurs looking to transition from their side hustle to their new full-time career so they can start living their dreams.</p>
 
-                <p>Now my passion is building websites for multi-passionate, creative entrepreneurs looking to transition from their side hustle to their new full-time career so they can start living their dreams.</p>
+                    <p class="about-p-accent">Your website is your storefront, waiting room, business card, a brochure, and a catalog, all in one. It’s your customers’ very first impression of you, and THE most important marketing tool you’ve got in today’s world.</p>
 
-                <p class="about-p-accent">Your website is your storefront, waiting room, business card, a brochure, and a catalog, all in one. It’s your customers’ very first impression of you, and THE most important marketing tool you’ve got in today’s world.</p>
+                    <p>A polished, engaging professional website customized for your ideal customers just isn’t optional anymore. It’s important to invest in your website from the very beginning.</p>
 
-                <p>A polished, engaging professional website customized for your ideal customers just isn’t optional anymore. It’s important to invest in your website from the very beginning.</p>
+                    <p>But I’m here to make it easy, fun, and inspiring—because a multitasking creative like you does not need more stressful items on your to-do list.</p>
 
-                <p>But I’m here to make it easy, fun, and inspiring—because a multitasking creative like you does not need more stressful items on your to-do list.</p>
+                    <p>I am a self-taught developer with degrees in Creative Writing and International Studies. But when I graduated, I saw the writing on the wall—that online business would soon take center stage—and so I pursued tech after college.</p>
 
-                <p>I am a self-taught developer with degrees in Creative Writing and International Studies. But when I graduated, I saw the writing on the wall—that online business would soon take center stage—and so I pursued tech after college.</p>
+                    <p>I perfected all my tech skills on Skillcrush, where I now spend half of my day helping others transform their careers into tech. And did I mention I also have a t-shirt line inspired by my love of fitness? Yep, I’ll always be a proud multi-passionate entrepreneur.</p>
 
-                <p>I perfected all my tech skills on Skillcrush, where I now spend half of my day helping others transform their careers into tech. And did I mention I also have a t-shirt line inspired by my love of fitness? Yep, I’ll always be a proud multi-passionate entrepreneur.</p>
+                    <div class="about-list">
+                        <h3>Fun facts:</h3>
+                        <ul>
+                            <li>As a child, I spent 10 years as a ballerina and now always walk with my feet turned out.</li>
+                            <li>I have an obsession with sticky notes.</li>
+                            <li>I got hired at Skillcrush via relationships established on Twitter.</li>
+                        </ul>
+                    </div>
 
-                <div class="about-list">
-                    <h3>Fun facts:</h3>
-                    <ul>
-                        <li>As a child, I spent 10 years as a ballerina and now always walk with my feet turned out.</li>
-                        <li>I have an obsession with sticky notes.</li>
-                        <li>I got hired at Skillcrush via relationships established on Twitter.</li>
-                    </ul>
+                    <p>Now I’d love to learn more about you and your business so we can start building the website that launches your new career.</p>
+
+                    <p class="about-p-accent">Wanna keep in touch? Jump on my email list to get the inspiration you need to keep growing, try new things, and go for it - delivered straight to your inbox.</p>
                 </div>
-
-                <p>Now I’d love to learn more about you and your business so we can start building the website that launches your new career.</p>
-
-                <p class="about-p-accent">Wanna keep in touch? Jump on my email list to get the inspiration you need to keep growing, try new things, and go for it - delivered straight to your inbox.</p>
 
                 <div class="email-signup">
                     <!-- Begin ConvertKit Signup Form -->
@@ -240,7 +243,7 @@
 
 
                                   <button class="subscribe_button ck_subscribe_button btn fields" id="ck_subscribe_button">
-                                    Join Me!
+                                    Get your resources
                                   </button>
                                 </form>
                               </div>
