updated header and shortened all word counts

--- a/march-update/portfolio/index.html
+++ b/march-update/portfolio/index.html
@@ -92,6 +92,7 @@
         <div class="menu-hide">
 
             <section class="welcome">
+                <div class="welcome-container">
                     <aside class="welcome-photos">
                         <div class="photo-row">
                             <figure class="aleia-photo">
@@ -106,11 +107,13 @@
                             </p>
                             <h1 class="uppercase">Aleia Walker</h1>
                             <p class="welcome-tagline">
-                                frontend developer + instructor at Skillcrush + <a href="https://www.bit.ly/side-hustle-starter">full-time side hustler</a>.
+                                <span class="welcome-span">I am a web designer/developer + <a href="https://www.bit.ly/side-hustle-starter">holder of all the freelance resources</a> + instructor at Skillcrush</span>.
                             </p>
-                            <p class="cta">... and I help other side hustlers make their mark on the web.</p>
-                        <p class="cta">Join me if you want to make a plan to change your career this year!</p>
-                    </div> <!-- welcome info wrapper -->
+                            <div class="opt-in-tagline non-homepage">
+                                <p>... and I help freelancers take their hustles full time.<br>
+                                Join me in fighting your fears and learn how escape your 9 to 5 by building your side hustle.</p>
+                            </div>
+                        </div> <!-- welcome info wrapper -->
                     <div class="email-signup">
                             <!-- Begin ConvertKit Signup Form -->
                             <script src="https://assets.convertkit.com/assets/CKJS4.js?v=21"></script>
@@ -141,7 +144,7 @@
 
 
                                   <button class="subscribe_button ck_subscribe_button btn fields" id="ck_subscribe_button">
-                                    Join Me!
+                                    Get your resources
                                   </button>
                                 </form>
                               </div>
@@ -160,6 +163,7 @@
                             </div>
                         </div>  --><!-- opt-in end -->        
                     </aside>
+                    </div>
                 </section>
 
                 <main class="portfolio">
