working on 1 of 3 resource pages

--- a/march-update/index.html
+++ b/march-update/index.html
@@ -176,7 +176,7 @@
                 </section>
                 <section class="offerings">
                     <div class="offerings-container">
-                        <h2>Let's talk...</h2>
+                        <h2>Let's talk about...</h2>
                         <div class="offerings-container-wrapper">
                             <article class="offerings-item" id="resources">
                                 <div class="offerings-items-container">
