uploaded MVP of first to know lists

--- a/march-update/index.html
+++ b/march-update/index.html
@@ -183,7 +183,7 @@
                                     <h3>...freelance resources.</h3>
                                     <div class="offerings-item-wrapper">
                                         <p>
-                                            You're working on figuring out what you want your side hustle to be or trying to learn skills to be better at your craft.    
+                                            You're a creative trying to choose a side hustle to be. Or a side hustler trying to learn skills to be better at your craft.    
                                         </p>
                                         <button>
                                             <a href="resources/">Want more resources?</a>
@@ -199,7 +199,7 @@
                                             You're pretty sure that you know what you want your side hustle to be but you need help making a plan to quit your 9 to 5 job? You want to work together someone who took their side hustle full-time to build your side hustle education, implementation, and marketing plan.  
                                         </p>
                                         <button>
-                                            <a href="hack-your-hustle/">Ready to make your plan?</a>
+                                            <a href="freelance-plan/">Ready to make your plan?</a>
                                         </button>
                                     </div>
                                 </div>
