--- a/march-update/resources/index.html
+++ b/march-update/resources/index.html
@@ -247,9 +247,29 @@
             </header>
             <section class="interest-list-description">
                 <div class="il-header-description">
-                <h2>text text text</h2>
-                <p>lorem of ipsum. ipsum. of . lorem.
+                <p class="description">
+                    When you first decide to add a side hustle to your hectic life, there are so many things to figure out. You can spend all day skimming the web, or you can skip all of the searching and go directly to the goods.
                 </p>
+
+                <h2>What is the Freelance Library?</h2>
+                <p>It's a collection of resource guides and ebooks designed to cut your research time in half and give you all of the freelance resources that you've been looking for, in one place.</p>
+
+
+                <h2>What you'll get...</h2>
+                <p>Guides to find all of the best freelance resources on...</p>
+                <ul>
+                    <li>Choosing the best side hustle for you</li>
+                    <li>Where to go for more skills</li>
+                    <li>Branding Design</li>
+                    <li>Copywriting for the Web</li>
+                    <li>Email Marketing</li>
+                    <li>Freelance Pricing</li>
+                    <li>How to Find Clients</li>
+                    <li>...and much</li>
+                </ul>
+                    
+                <h2>Who is this for?</h2>
+                <p>You're a creative trying to choose a side hustle. Or a side hustler trying to learn skills to be better at your craft.</p>
 
                 </div>
             </section>
